# job-service-python

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.infra.yml  docker-compose.metrics.yml  docker-compose.yml  magerc.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
infra/metrics/: prometheus.yml
migrations/: env.py
migrations/versions/: 32359e1b3300_add_soft_delete_to_feature.py  3850a17840e8_add_audit_and_parity_fix.py  923509e24aee_add_session_version_and_security_fields.py  a1b2c3d4e5f6_add_outbox_table.py  aaa5f275344d_auto_migration.py  ec110af39822_initial_schema.py
scratch/: clean_comments.py  coverage_check.py  debug_filter.py  debug_roles.py  debug_startup.py  run_tests.py  test_date_filter.py  test_nested_filter.py
scripts/: generate_module.py  install_storage.py
src/: app.py  main.py
src/core/: __init__.py  base_job.py  base_repository.py  base_service.py  cache.py  scheduler.py
src/jobs/: health_check_job.py  register_jobs.py
src/shared/: exceptions.py
tests/: conftest.py  test_app.py  test_main.py
tests/core/: test_base_job.py  test_base_repository.py  test_base_repository_edges.py  test_base_repository_nested.py  test_base_service.py  test_base_service_filters.py  test_cache.py  test_scheduler.py
tests/infra/: test_auth_provider.py  test_db.py  test_metric_service.py  test_pdf_provider.py  test_rabbitmq_provider.py
tests/jobs/: test_health_check_job.py  test_register_jobs.py
tests/shared/: test_error_handlers.py  test_exceptions.py
(+113 files in other folders)
