[project]
name = "backend-python"
version = "1.0.0"
description = "FastAPI backend boilerplate"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["venv", ".venv", "migrations"]

[[tool.mypy.overrides]]
module = "src.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests", "migrations", ".git"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "src/main.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
